--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.37.1",
+    "axios": "^1.7.2",
     "firebase": "^10.12.0",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
@@ -24,6 +26,8 @@
     "react-simple-captcha": "^9.3.1",
     "react-tabs": "^6.0.2",
     "sort-by": "^1.2.0",
+    "sweetalert": "^2.1.2",
+    "sweetalert2": "^11.11.0",
     "swiper": "^11.1.3"
   },
   "devDependencies": {
